duvet/src/text/snapshots/duvet__text__find__tests__end.snap
---
source: duvet/src/text/find.rs
expression: "find(\"d\", \"a b c d\")"
---
Some(
    (
        6..7,
        Exact,
        "d",
    ),
)
