duvet/src/text/snapshots/duvet__text__find__tests__end_2.snap
---
source: duvet/src/text/find.rs
expression: "find(\"c d\", \"a b c d\")"
---
Some(
    (
        4..7,
        "c d",
    ),
)
