duvet/src/text/snapshots/duvet__text__find__tests__hyphenated_haystack.snap
---
source: duvet/src/text/find.rs
expression: "find(\"this is a new-line\", \"this is a new-\\nline\")"
---
Some(
    (
        0..19,
        "this is a new-\nline",
    ),
)
