duvet/src/text/snapshots/duvet__text__find__tests__hyphenated_needle.snap
---
source: duvet/src/text/find.rs
expression: "find(\"this is a new-\\nline\", \"this is a new-line\")"
---
Some(
    (
        0..18,
        "this is a new-line",
    ),
)
