duvet/src/text/snapshots/duvet__text__find__tests__middle.snap
---
source: duvet/src/text/find.rs
expression: "find(\"b\", \"a b c d\")"
---
Some(
    (
        2..3,
        Exact,
        "b",
    ),
)
