duvet/src/text/snapshots/duvet__text__find__tests__middle_2.snap
---
source: duvet/src/text/find.rs
expression: "find(\"b c\", \"a b c d\")"
---
Some(
    (
        2..5,
        "b c",
    ),
)
