duvet/src/text/snapshots/duvet__text__find__tests__punctuation_test.snap
---
source: duvet/src/text/find.rs
expression: "find(\"  Second   Sentence.  \",\n\" First    sentence.   Second Sentence.   Third  Sentence.   \")"
---
Some(
    (
        22..38,
        Exact,
        "Second Sentence.",
    ),
)
