duvet/src/text/snapshots/duvet__text__find__tests__start.snap
---
source: duvet/src/text/find.rs
expression: "find(\"a\", \"a b c d\")"
---
Some(
    (
        0..1,
        "a",
    ),
)
