duvet/src/text/snapshots/duvet__text__find__tests__start_2.snap
---
source: duvet/src/text/find.rs
expression: "find(\"a b\", \"a b c d\")"
---
Some(
    (
        0..3,
        Exact,
        "a b",
    ),
)
