duvet/src/text/snapshots/duvet__text__find__tests__ws_difference.snap
---
source: duvet/src/text/find.rs
expression: "find(\"     this       should   ignore whitespace      differences\",\n\"         this             should       ignore       whitespace            differences\")"
---
Some(
    (
        9..85,
        Exact,
        "this             should       ignore       whitespace            differences",
    ),
)
